crates/aranya-policy-compiler/tests/data/type_errors/if_cond_not_bool_invalid_type_1.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     return if 0 { :3 } else { :4 }
  |               ^ expected `bool` but found `int`
